Branding and first attempt to fix blank splash screen on ios

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,37 +1,6 @@
-.welcome-card img {
-  max-height: 35vh;
-  overflow: hidden;
-}
-
-.scrolling-wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
-
-  .card {
-    display: inline-block;
+ion-slide{ 
+  ion-list{
+      height: auto; // padding for footer
+      overflow-y: scroll;
   }
-}
-
-.scrolling-wrapper-flexbox {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-
-  .card {
-    flex: 0 0 auto;
-    height: 300px;
-  }
-}
-
-.scrolling-wrapper {
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-.displayed {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
