--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -1,10 +1,11 @@
 ion-content{
 
-    --ion-background-color:#f2b632;
+    // --ion-background-color:#4D0A0A;
 
     h1{
         font-size: 45px;
-        margin-top:50px
+        margin-top:50px;
+        color : #4D0A0A;
     }
 }
 
